Fixes contrast issue for cards with a yellow bg

--- a/site/_scss/blocks/_featured-card.scss
+++ b/site/_scss/blocks/_featured-card.scss
@@ -17,6 +17,10 @@
 
   &--bg-yellow {
     background: var(--color-meettheteam-bg);
+
+    .button-text {
+      color: var(--color-blue-medium)
+    }
   }
 }
 
